test-expected/large/graphtemplates/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: graphtemplates
    foo.com/duversion: 1.5.383-20190925.1569389366352
    foo.com/version: 1.5.383
  labels:
    app.kubernetes.io/name: graphtemplates
    helm.sh/chart: graphtemplates-1.5.383
  name: graphtemplates
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: graphtemplates
  type: ClusterIP
