test-expected/large/graphtemplates/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: graphtemplates
    foo.com/duversion: 1.5.383-20190925.1569389366352
    foo.com/version: 1.5.383
  labels:
    app.kubernetes.io/name: graphtemplates
    helm.sh/chart: graphtemplates-1.5.383
  name: graphtemplates
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /graphTemplates
    - uri:
        prefix: /graphTemplates/
    route:
    - destination:
        host: graphtemplates.peekay.svc.cluster.local
